# NLPBased

./: genius.py  genius.review.md  moo_point.py  pyproject.toml  song_lyrics.txt  spacy_for_demo.py  spacy_fr.py  spacy_it.py
